--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 </html>
 
-<!-- <script src="/socket.io/socket.io.js"></script> -->
+<script src="/socket.io/socket.io.js"></script>
 <script>
-    // let socket = io();
+    let socket = io();
 
     let form = document.getElementById('form');
     let input = document.getElementById('input');
@@ -31,14 +31,14 @@
         e.preventDefault();
         if (input.value) {
             console.log(input.value);
-            // socket.emit('chat message', input.value);
+            socket.emit('chat message', input.value);
             input.value = '';
         }
     });
 
-    // socket.on('chat message', function (msg) {
-    //     let htmlString = `<div class="message">${input.value}</div>`;
-    //     document.getElementById('messages').insertAdjacentHTML('beforeend', htmlString);
-    //     document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight;
-    // });
+    socket.on('chat message', function (msg) {
+        let htmlString = `<div class="message">${input.value}</div>`;
+        document.getElementById('messages').insertAdjacentHTML('beforeend', htmlString);
+        document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight;
+    });
 </script>
